--- a/style.css
+++ b/style.css
@@ -8,11 +8,19 @@ font-family: 'Asap', sans-serif;
 #para1{
 
     text-align: center;
-    font-size: 30;
+    font-size: 25px;
     font-family: 'Asap', sans-serif;
 
 
 }
+
+#parawrap{
+width: 50%;
+
+    
+}
+
+
 
 
 
